--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "chromatic": "npx chromatic --project-token=c11addee478b"
   },
   "eslintConfig": {
     "extends": [
@@ -54,14 +55,15 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^6.4.9",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
     "@storybook/node-logger": "^6.4.9",
-    "@storybook/addon-a11y": "^6.4.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
     "@storybook/testing-react": "^0.0.18",
+    "chromatic": "^6.2.0",
     "cypress": "^8.2.0",
     "jest-axe": "^5.0.1",
     "msw": "^0.32.0",
